@@ -44,7 +44,7 @@ dependencies {
   runtimeOnly 'ch.qos.logback:logback-classic:1.3.0-alpha4' // 1.3.0-alpha5 isn't working with Jansi
   runtimeOnly 'com.h2database:h2:1.4.200'
   runtimeOnly 'com.microsoft.sqlserver:mssql-jdbc:8.2.2.jre11'
-//   runtimeOnly 'com.oracle.ojdbc:ojdbc8:19.3.0.0'
+  runtimeOnly 'com.oracle.database.jdbc:ojdbc10dms:19.6.0.0'
   runtimeOnly 'javax.servlet:javax.servlet-api:4.0.1' // needed by logback
   runtimeOnly 'net.sourceforge.jtds:jtds:1.3.1'
   runtimeOnly 'org.apache.derby:derby:10.15.2.0'
@@ -79,7 +79,9 @@ javafx {
 
 def runtimeJvmArgs = [
         '-Xms1g',
+        '--add-opens', 'java.base/java.lang.invoke=retrofit2',
         "--add-opens",  "java.base/java.lang.invoke=vars.query.merged.module"
+        // '--add-reads', 'vars.query.merged.module=org.slf4j'
 ]
 
 def confEnvParams = [
